[package]
edition = "2018"
name = "aioracle_health_check"
version = "0.1.0"

exclude = [
  "artifacts/*",
] # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cw-storage-plus = { workspace = true, features = ["iterator"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
bech32 = { workspace = true }
ripemd = "0.1.1"
sha2 = { workspace = true, default-features = false }
aioracle_base = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
cw-multi-test = { workspace = true }
sha2 = { workspace = true, default-features = false }
aioracle_v2 = { workspace = true }
