[package]
name = "aioracle_v2"
version = "0.3.1"
authors = ["Oraichain"]
edition = "2018"
description = "An ai oracle contract using optimistic rollup"
license = "Apache-2.0"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true, default-features = false }
cosmwasm-crypto = "0.14.0"
cw2 = "0.5.0"
aioracle_base = { workspace = true }
bech32 = { workspace = true }
ripemd = "0.1.1"

[dev-dependencies]
cosmwasm-schema = "0.13.2"
provider_bridge = { workspace = true }
sha2 = { workspace = true, default-features = false }
cosmwasm-crypto = "0.14.0"
cw-multi-test = { workspace = true }
aioracle_service_fees = { workspace = true }
bech32 = { workspace = true }
ripemd = "0.1.1"
