[package]
name = "aioracle_v2"
version = "0.3.1"
authors = ["Oraichain"]
edition = "2018"
description = "An ai oracle contract using optimistic rollup"
license = "Apache-2.0"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true, default-features = false }
cosmwasm-schema = { workspace = true }
cosmwasm-crypto = { workspace = true }
cw2 = { workspace = true }
aioracle_base = { workspace = true }
bech32 = { workspace = true }
ripemd = "0.1.1"

[dev-dependencies]

provider_bridge = { workspace = true }
sha2 = { workspace = true, default-features = false }
cw-multi-test = { workspace = true }
aioracle_service_fees = { workspace = true }
bech32 = { workspace = true }
ripemd = "0.1.1"
