[package]
authors = ["Le Duc Pham <duc@orai.io>"]
edition = "2018"
name = "provider_bridge"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]

cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true, features = ["iterator"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
cw-storage-plus = { workspace = true, features = ["iterator"] }
aioracle_base = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
cw-multi-test = { workspace = true }
aioracle_service_fees = { workspace = true }
