[package]
authors = ["Oraichain Labs"]
edition = "2021"
license = "AGPL-3.0"
name = "counter_high_gas_cost"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true, features = ["iterator"] }
cosmwasm-schema = { workspace = true }
schemars = "0.8"
serde = { workspace = true, features = ["derive"] }
thiserror = "1.0"
cosmwasm-crypto = "0.14"
sha3 = "0.10"

[dev-dependencies]
cosmwasm-vm = { workspace = true, default-features = false }
sha3 = "0.10"
rand = "0.7.3"
pairing = "0.16.0"
