[package]
authors = ["Thanh tu <tu@orai.io>"]
edition = "2018"
license = "AGPL-3.0"
name = "dkg"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true, features = ["iterator"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = "1.0"
sha2 = { workspace = true }
cw-storage-plus = { workspace = true, features = ["iterator"] }
[dev-dependencies]
cosmwasm-vm = { workspace = true, default-features = false }
cosmwasm-schema = { workspace = true }
hex = { workspace = true }
