[package]
authors = ["Le Duc Pham <duc@orai.io>"]
edition = "2018"
name = "locked_ow721"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []


[dependencies]

cosmwasm-crypto = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true, features = ["iterator"] }
cw-storage-plus = { workspace = true, features = ["iterator"] }
cw721 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
