[package]
name = "market_1155_implementation"
version = "0.1.0"
authors = ["oraichain <tu@orai.io>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true, features = ["iterator"] }
cosmwasm-storage = { workspace = true, features = ["iterator"] }
cw1155 = { workspace = true }
cw20 = { workspace = true }
market_1155 = { workspace = true }
market = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
market_ai_royalty = { workspace = true }
market_auction_extend = { workspace = true }
market_rejected = { workspace = true }
market_whitelist = { workspace = true }
market_payment = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
market_hub = { workspace = true }
market_ai_royalty_storage = { workspace = true }
market_rejected_storage = { workspace = true }
market_whitelist_storage = { workspace = true }
market_1155_storage = { workspace = true }
market_payment_storage = { workspace = true }
market_auction_extend_storage = { workspace = true }
ow1155 = { workspace = true }
cw20-base = { workspace = true }
