[package]
name = "market_nft_staking"
version = "0.1.0"
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true, features = ["iterator"] }
cosmwasm-storage = { workspace = true, features = ["iterator"] }
cw1155 = { workspace = true }
cw721 = { workspace = true }
market = { workspace = true }
cosmwasm-crypto = "0.14.0"
tiny-keccak = { workspace = true, features = ["sha3", "keccak"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
ow1155 = { workspace = true }
oraichain_nft = { workspace = true }
