[package]
name = "marketplace"
version = "0.1.0"
authors = ["oraichain <tu@orai.io>"]
edition = { workspace = true }

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true, features = ["iterator"] }
cosmwasm-storage = { workspace = true, features = ["iterator"] }
cw721 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
sha2 = { workspace = true }
cosmwasm-schema = { workspace = true }
