[package]
name = "merkle-proof-tree"
version = "0.7.0"
authors = [
  "Orkun Kulce <orkunkl@users.noreply.github.com>",
  "Terraform Labs, PTE.",
  "duc@orai.io",
]
edition = { workspace = true }
description = "An Airdrop contract for allowing users to claim rewards with Merkle Tree based proof"
license = "Apache-2.0"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true, default-features = false }

[dev-dependencies]
cosmwasm-schema = "0.13.2"
