[package]
authors = ["Confio, Thanh tu <tu@orai.io> and Duc Pham <duc@orai.io>"]
edition = "2018"
license = "AGPL-3.0"
name = "oraichain_vrf_v1"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
cranelift = ["cosmwasm-vm/cranelift"]

[dependencies]
drand_verify_v1 = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true, features = ["iterator"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }

[dev-dependencies]
cosmwasm-vm = { workspace = true, features = ["iterator"] }
hex-literal = { workspace = true }
