[package]
name = "ow20-merkle-airdrop"
version = "0.7.0"
authors = [
  "Orkun Kulce <orkunkl@users.noreply.github.com>",
  "Terraform Labs, PTE.",
  "duc@orai.io",
]
edition = "2021"
description = "An Airdrop contract for allowing users to claim rewards with Merkle Tree based proof"
license = "Apache-2.0"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cw-utils = { workspace = true }
cw-storage-plus = { workspace = true, features = ["iterator"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true, default-features = false }
cw20 = { workspace = true }
cosmwasm-schema = { workspace = true }
