[package]
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
description = "Basic implementation of a CosmWasm-20 compliant token"
documentation = "https://docs.cosmwasm.com"
edition = "2018"
homepage = "https://cosmwasm.com"
license = "Apache-2.0"
name = "ow20"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
version = "0.5.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []


[dependencies]

cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true, features = ["iterator"] }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
