[package]
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = { workspace = true }
description = "Basic implementation of a CosmWasm-20 compliant token"
documentation = "https://docs.cosmwasm.com"
homepage = "https://cosmwasm.com"
license = "Apache-2.0"
name = "ow20"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
version = "0.5.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []


[dependencies]
cosmwasm-std = { workspace = true, features = ["iterator"] }
cosmwasm-storage = { workspace = true, features = ["iterator"] }
cw2 = { workspace = true }
cw-utils = { workspace = true }
cw20 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true }
cosmwasm-schema = { workspace = true }
